syntax = "proto3";
package wallet;
option java_multiple_files= true;
option java_package = "proto.service.proto";
option java_outer_classname = "walletProtoService";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "wallet.proto";
import "transaction.proto";
import "user.proto";

service WalletService {
  rpc SayHelloService(SayHello) returns (SayHelloResponse){}
  rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse){}
}

service GetWalletService {
    rpc GetWallets(GetWalletsRequest) returns (GetWalletsResponse){}
    rpc GetSingleWallet(GetSingleWalletRequest) returns (Wallet){}
    rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse){}
}

service DeleteWalletService {
  rpc DeleteWallet(DeleteWalletRequest) returns (Empty){}
}

service TransactionInitService {
    rpc FundWallet (FundWalletRequest) returns (FundDepositResponse){}
  rpc FundTransfer (FundTransferRequest) returns (FundDepositResponse){}
}

service GetTransactionService {
  rpc GetSingleTransaction(GetSingleTransactionRequest) returns (Transaction){}
  rpc GetAllTransactions(GetAllTransactionsRequest) returns (GetAllTransactionsResponse){}
}